edc-sha3/kubernetes/prod/edc-sha3-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: equibit-ingress
spec:
  rules:
  - host: edc-sha3.equibit-prod.us-east.containers.mybluemix.net
    http:
      paths:
      - backend:
          serviceName: edc-sha3-service
          servicePort: 80
